fix: fix scrollbar none at firefox

--- a/src/components/ScrollCardGroup/MainPageScrollCard.module.scss
+++ b/src/components/ScrollCardGroup/MainPageScrollCard.module.scss
@@ -14,6 +14,7 @@
   transition: 0.3s ease;
   width: 90%;
   scroll-behavior: smooth;
+  scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
   }
